# Project-LLM

./: .gitignore  LICENSE  README.md  chat.py  dpo_train.py  finetune_gpt2.py  instruction_tune.py  main.py  pyproject.toml  requirements.txt  sk_chat.py  test_main.py  test_sk_integration.py
Data/: instruction_data.json  preference_data.json
exercises/: attention_exercises.md  hard_attention_exercises.md
src/intuition/: custom_tokenizers.py
src/model/: attention.py  generate.py  gpt.py  load_gpt2.py  transformerBlock.py
src/sk_integration/: __init__.py  memory_manager.py  orchestrator.py  plugins.py
src/tokenizer/: __init__.py
src/tokenizer/app/: __init__.py  application.py
src/tokenizer/core/: __init__.py  constants.py  exceptions.py  logging.py
src/tokenizer/models/: __init__.py  schemas.py
src/tokenizer/processing/: __init__.py  cleaner.py  file_reader.py  splitter.py
src/tokenizer/protocols/: __init__.py  interfaces.py
src/tokenizer/tokenizers/: __init__.py  base.py  factory.py  simple.py  with_unknown.py
src/tokenizer/vocabulary/: __init__.py  builder.py
