[project]
name = "simple-python-project"
version = "0.1.0"
description = "Simple Python Test Project"
requires-python = ">=3.9"
dependencies = [
    "greenlet>=3.2.4",
    "playwright>=1.56.0",
    "pyee>=13.0.0",
    "typing_extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
